--- a/urler.css
+++ b/urler.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-	padding: 0;
+	padding: 0 0 1em 0;
 	margin: 1em auto;
 	max-width: 900px;
 	color: black;
@@ -26,18 +26,23 @@ h1 {
 }
 
 p {
-	font: 10pt/12pt serif;
+	font: 10pt serif;
 }
 
 a {
-	color: #702;
+	color: #602;
 	background-color: inherit;
 	text-decoration: none;
 }
 
 a.del {
-	margin: 0 1em;
+	margin: 0 0.5em 0 1em;
 	color: #201;
 	background-color: inherit;
 	font: bold 12pt/12pt serif;
+}
+
+a:visited {
+	color: #bbb;
+	background-color: inherit;
 }
